--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
         
         <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-6">
             <div onclick="openModal('Mobile Legends')" class="bg-gray-800 rounded-2xl overflow-hidden hover:ring-2 hover:ring-yellow-500 transition-all cursor-pointer group shadow-lg">
-                <img src="https://img.viva.co.id/main/content/2023/12/19/658133534b868-ilustrasi-mobile-legends-bang-bang_1265_711.jpg" class="w-full h-40 object-cover">
+                <img src="https://api.duniagames.co.id/api/content/upload/file/10202283031671018803.jpg" class="w-full h-40 object-cover">
                 <div class="p-4 text-center font-bold">Mobile Legends</div>
             </div>
 
             <div onclick="openModal('Free Fire')" class="bg-gray-800 rounded-2xl overflow-hidden hover:ring-2 hover:ring-yellow-500 transition-all cursor-pointer group shadow-lg">
-                <img src="https://garena.com/images/ff_logo.jpg" class="w-full h-40 object-cover">
+                <img src="https://api.duniagames.co.id/api/content/upload/file/8575971481671019013.jpg" class="w-full h-40 object-cover">
                 <div class="p-4 text-center font-bold">Free Fire</div>
             </div>
         </div>
