--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
         
         <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-6">
             <div onclick="openModal('Mobile Legends')" class="bg-gray-800 rounded-2xl overflow-hidden hover:ring-2 hover:ring-yellow-500 transition-all cursor-pointer group shadow-lg">
-                <img src="https://gcdn.palingmurah.id/images/1665457317734.jpg" class="w-full h-40 object-cover border-b border-gray-700" onerror="this.src='https://via.placeholder.com/150x200?text=MLBB'">
+                <img src="mlbb.jpg" class="w-full h-40 object-cover border-b border-gray-700">
                 <div class="p-4 text-center font-bold">Mobile Legends</div>
             </div>
 
             <div onclick="openModal('Free Fire')" class="bg-gray-800 rounded-2xl overflow-hidden hover:ring-2 hover:ring-yellow-500 transition-all cursor-pointer group shadow-lg">
-                <img src="https://gcdn.palingmurah.id/images/1665457367808.jpg" class="w-full h-40 object-cover border-b border-gray-700" onerror="this.src='https://via.placeholder.com/150x200?text=Free+Fire'">
+                <img src="ff.jpg" class="w-full h-40 object-cover border-b border-gray-700">
                 <div class="p-4 text-center font-bold">Free Fire</div>
             </div>
         </div>
@@ -96,5 +96,6 @@
     </script>
 </body>
 </html>
+
 
 
