--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <div onclick="openModal('Free Fire')" class="bg-gray-800 rounded-2xl overflow-hidden hover:ring-2 hover:ring-yellow-500 transition-all cursor-pointer group shadow-xl">
                 <div class="relative bg-gray-700 h-48 overflow-hidden">
-                    <img src="./ff.jpg" alt="FF" class="w-full h-full object-cover group-hover:scale-110 transition duration-300" onerror="this.src='https://via.placeholder.com/300x400?text=FF+Image+Error'">
+                    <img src="./ff.jpg.jpg" alt="FF" class="w-full h-full object-cover group-hover:scale-110 transition duration-300" onerror="this.src='https://via.placeholder.com/300x400?text=FF+Image+Error'">
                 </div>
                 <div class="p-4 text-center font-bold text-sm bg-gray-800">Free Fire</div>
             </div>
@@ -118,3 +118,4 @@
     </script>
 </body>
 </html>
+
