--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     Top Up Game <br><span class="text-yellow-300">Tanpa Ribet.</span>
                 </h2>
                 <p class="text-emerald-50 text-lg md:text-xl opacity-90 mb-10 leading-relaxed">
-                    Dapatkan harga termurah se-Indonesia dengan pengiriman instan 24 jam. Hemat uang Anda, naikkan rank Anda sekarang!
+                    Dapatkan harga termurah se-Indonesia. Hemat uang Anda, naikkan rank Anda sekarang!
                 </p>
                 <div class="flex flex-wrap gap-4">
                     <div class="flex items-center gap-2 bg-white/10 px-4 py-2 rounded-lg border border-white/10">
@@ -212,3 +212,4 @@
     </script>
 </body>
 </html>
+
