--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="flex flex-wrap gap-4">
                     <div class="flex items-center gap-2 bg-white/10 px-4 py-2 rounded-lg border border-white/10">
                         <i class="fas fa-check-circle text-yellow-300"></i>
-                        <span class="text-sm font-medium">Proses 1 Menit</span>
+                        <span class="text-sm font-medium">Proses Tercepat</span>
                     </div>
                     <div class="flex items-center gap-2 bg-white/10 px-4 py-2 rounded-lg border border-white/10">
                         <i class="fas fa-shield-alt text-yellow-300"></i>
@@ -212,4 +212,5 @@
     </script>
 </body>
 </html>
+
 
