--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="relative h-64 rounded-2xl overflow-hidden mb-4">
                         <img src="./mlbb.jpg" alt="MLBB" class="w-full h-full object-cover transition duration-700 group-hover:scale-110">
                         <div class="absolute inset-0 bg-gradient-to-t from-slate-900/80 to-transparent"></div>
-                        <span class="absolute top-4 left-4 bg-yellow-500 text-black text-[10px] font-extrabold px-3 py-1 rounded-full shadow-lg">HOT</span>
+                        <span class="absolute top-4 left-4 bg-red-600 text-black text-[10px] font-extrabold px-3 py-1 rounded-full shadow-lg">HOT</span>
                     </div>
                     <div class="px-2 pb-2">
                         <h4 class="font-bold text-lg group-hover:text-yellow-500 transition">Mobile Legends</h4>
@@ -99,7 +99,7 @@
                     <div class="relative h-64 rounded-2xl overflow-hidden mb-4">
                         <img src="./ff.jpg" alt="FF" class="w-full h-full object-cover transition duration-700 group-hover:scale-110">
                         <div class="absolute inset-0 bg-gradient-to-t from-slate-900/80 to-transparent"></div>
-                        <span class="absolute top-4 left-4 bg-emerald-500 text-white text-[10px] font-extrabold px-3 py-1 rounded-full shadow-lg">PROMO</span>
+                        <span class="absolute top-4 left-4 bg-amber-400 text-white text-[10px] font-extrabold px-3 py-1 rounded-full shadow-lg">PROMO</span>
                     </div>
                     <div class="px-2 pb-2">
                         <h4 class="font-bold text-lg group-hover:text-yellow-500 transition">Free Fire</h4>
@@ -212,5 +212,6 @@
     </script>
 </body>
 </html>
+
 
 
