--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
                     </div>
                 </div>
 
-                <button onclick="checkoutWA()" class="w-full bg-yellow-500 hover:bg-yellow-400 text-black py-5 rounded-2xl font-extrabold flex items-center justify-center gap-3 mt-6 transition shadow-xl shadow-yellow-500/20 active:scale-95">
-                    <i class="fab fa-whatsapp text-2xl"></i> BELI SEKARANG
+                <button onclick="checkoutWA()" class="w-full bg-emerald-500 hover:bg-emerald-400 text-white py-5 rounded-2xl font-extrabold flex items-center justify-center gap-3 mt-6 transition shadow-xl shadow-emerald-500/20 active:scale-95">
+    <i class="fab fa-whatsapp text-2xl"></i> BELI SEKARANG
                 </button>
             </div>
         </div>
@@ -212,6 +212,7 @@
     </script>
 </body>
 </html>
+
 
 
 
