--- a/index.html
+++ b/index.html
@@ -205,57 +205,52 @@ async function prosesPembayaran() {
     const btn = document.getElementById('btn-bayar');
 
     if(!userid || !selectedProduct) {
-        alert("Mohon isi User ID dan pilih produk terlebih dahulu!");
+        alert("Pilih ID dan Produk!");
         return;
     }
 
-    // Animasi Loading
     btn.innerHTML = '<i class="fas fa-circle-notch fa-spin text-2xl"></i> MENYIAPKAN PEMBAYARAN...';
     btn.disabled = true;
 
     try {
-        // 1. Meminta token pembayaran dari backend PHP Anda
-        const response = await fetch('request_payment.php', {
+        // Panggil backend Vercel (api/pay.js)
+        const response = await fetch('/api/pay', {
             method: 'POST',
-            headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-            body: new URLSearchParams({
-                'userid': userid,
-                'game': selectedGame,
-                'product': selectedProduct,
-                'price': selectedPrice // Pastikan variabel ini sudah terisi saat pilih produk
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({
+                userid: userid,
+                game: selectedGame,
+                product: selectedProduct,
+                price: selectedPrice
             })
         });
 
         const data = await response.json();
 
-        // 2. Memanggil Jendela Pembayaran Duitku
-        checkout.process(data.reference, {
-            successEvent: function(result) {
-                alert("Pembayaran Berhasil! Pesanan sedang diproses.");
-                location.reload();
-            },
-            pendingEvent: function(result) {
-                alert("Menunggu pembayaran Anda.");
-            },
-            errorEvent: function(result) {
-                alert("Pembayaran gagal atau dibatalkan.");
-                btn.disabled = false;
-                btn.innerHTML = '<i class="fas fa-credit-card text-2xl"></i> BAYAR SEKARANG';
-            },
-            closeEvent: function(result) {
-                btn.disabled = false;
-                btn.innerHTML = '<i class="fas fa-credit-card text-2xl"></i> BAYAR SEKARANG';
-            }
-        });
+        if(data.reference) {
+            // Memanggil Popup Duitku
+            checkout.process(data.reference, {
+                successEvent: function(result) {
+                    alert("Pembayaran Berhasil!");
+                    location.reload();
+                },
+                pendingEvent: function(result) { alert("Selesaikan pembayaran Anda."); },
+                errorEvent: function(result) { alert("Gagal!"); btn.disabled = false; },
+                closeEvent: function(result) { btn.disabled = false; }
+            });
+        } else {
+            alert("Error: " + data.statusMessage);
+            btn.disabled = false;
+        }
     } catch (error) {
-        alert("Gagal terhubung ke server pembayaran.");
+        alert("Gagal terhubung ke Serverless Function.");
         btn.disabled = false;
-        btn.innerHTML = '<i class="fas fa-credit-card text-2xl"></i> BAYAR SEKARANG';
     }
 }
     </script>
 </body>
 </html>
+
 
 
 
