--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="hidden md:flex items-center gap-8 font-semibold text-sm">
                 <a href="#" class="hover:text-yellow-500 transition text-yellow-500">Home</a>
-                <a href="#" class="hover:text-yellow-500 transition">Lacak Pesanan</a>
+                <a href="lacak.html" class="hover:text-yellow-500 transition">Lacak Pesanan</a>
                 <a href="#" class="hover:text-yellow-500 transition">Testimoni</a>
             </div>
             <button class="bg-yellow-500 text-black px-6 py-2.5 rounded-full font-bold hover:bg-yellow-400 transition shadow-lg shadow-yellow-500/20 active:scale-95 text-sm">
@@ -257,4 +257,5 @@ async function prosesPembayaran() {
     </script>
 </body>
 </html>
+
 
